# development-framework

./: CMakeLists.txt  README.md
nodejs/: file_utils.js  serve_image.js
python/: main.py
python/server/: Server.py
python/server/templates/: observations.html
src/: CMakeLists.txt
src/audio/: CMakeLists.txt
src/audio/alsa/: CMakeLists.txt  PCMDeviceOutput.cpp  PCMDeviceOutput.hpp  PCMDevicePlayer.cpp  PCMDevicePlayer.hpp
src/audio/wave/: CMakeLists.txt  JunkChunk.cpp  JunkChunk.hpp  ListChunk.cpp  ListChunk.hpp  RiffChunk.hpp  RiffHeader.cpp  RiffHeader.hpp  Subchunk1.cpp  Subchunk1.hpp  Subchunk2.cpp  Subchunk2.hpp  WavReader.cpp  WavReader.hpp
src/dsp/: CMakeLists.txt  CooleyTurkeyFFT.cpp  CooleyTurkeyFFT.hpp
src/pipeline/: CMakeLists.txt
src/pipeline/data/: CMakeLists.txt  PipelineData.cpp  PipelineData.hpp
src/pipeline/node/: AsyncNode.cpp  AsyncNode.hpp  CMakeLists.txt  Node.cpp  Node.hpp
src/pipeline/node/forwarder/: CMakeLists.txt  Forwarder.hpp  GenericForwarder.cpp  GenericForwarder.hpp  MultiForwarder.cpp  MultiForwarder.hpp
src/pipeline/node/receptor/: CMakeLists.txt  Receptor.hpp
src/pipeline_impl/: CMakeLists.txt
src/pipeline_impl/motiondetector/: CMakeLists.txt  MotionDetector_node.cpp  MotionDetector_node.hpp
src/pipeline_impl/nodes/: AccumulatorNode.cpp  AccumulatorNode.hpp  CMakeLists.txt  FFTNode.cpp  FFTNode.hpp  FileReaderNode.cpp  FileReaderNode.hpp  FileRecorderNode.cpp  FileRecorderNode.hpp  FrameCaptureNode_Raspicam.cpp  FrameCaptureNode_Raspicam.hpp  FrameCaptureNode_Webcam.cpp  FrameCaptureNode_Webcam.hpp  FrameDisplayNode.cpp  FrameDisplayNode.hpp  HexPrinterNode.cpp  HexPrinterNode.hpp  PCMDevicePlayerNode.cpp  PCMDevicePlayerNode.hpp  UdpReceiverNode.cpp  UdpReceiverNode.hpp
src/signaling/: CMakeLists.txt  SignalUntilKill.cpp  SignalUntilKill.hpp
src/utils/: AbstractThread.cpp  AbstractThread.hpp  CMakeLists.txt
src/utils/argparser/: CMakeLists.txt  StringConverter.hpp
src/utils/buffer/: BufferParser.cpp  BufferParser.hpp  BufferSerializer.cpp  BufferSerializer.hpp  CMakeLists.txt
src/utils/file/: CMakeLists.txt  FileReaderUtils_c.hpp  FilenameUtils.hpp
src/utils/queuing/: CMakeLists.txt  MessageQueue.hpp
src/utils/socket/: CMakeLists.txt  UdpReceiver.cpp  UdpReceiver.hpp  UdpSender.cpp  UdpSender.hpp
src/utils/thread/: AbstractThread.cpp  AbstractThread.hpp  CMakeLists.txt
src/video/: CMakeLists.txt
src/video/opencv_constructs/: BackgroundSubtractor.cpp  BackgroundSubtractor.hpp  CMakeLists.txt  ImageTransformations.cpp  ImageTransformations.hpp  MotionDetector.cpp  MotionDetector.hpp  OpenCV_Raspicam.cpp  OpenCV_Raspicam.hpp  OpenCV_WebCam.cpp  OpenCV_WebCam.hpp  RaspicamRaw.cpp  RaspicamRaw.hpp
test/: CMakeLists.txt
test/audio/alsa/: CMakeLists.txt  TestPCMDeviceOutput.cpp  TestPCMDevicePlayer.cpp
test/audio/wave/: CMakeLists.txt  WavReaderTest.cpp
test/config/json/: CMakeLists.txt  TestJson.cpp  test.json
test/dsp/: CMakeLists.txt  CooleyTurkeyTest.cpp
test/pipeline_impl/: CMakeLists.txt  TestFileReaderWriterAccumulator.cpp  TestPipelineNodes.cpp  TestRaspiCam.cpp  TestVideo.cpp  TestWebCam.cpp  TestWebCam.json
test/pipeline_impl/motiondetector/: CMakeLists.txt  TestMotionDetector.cpp  TestMotionDetector.json  TestMotionDetectorConfig.hpp
test/pipeline_impl/realtime_display/: CMakeLists.txt  TestWebCam.cpp  TestWebCam.json
test/utils/socket/: CMakeLists.txt  TestReceiver.cpp  TestSender.cpp  TestSocket.cpp  test_send.py
test/video/: CMakeLists.txt  TestRaspicamRaw.cpp
