add_executable(TestPipelineNodes TestPipelineNodes.cpp)
target_link_libraries(TestPipelineNodes nodes_impl)
target_link_libraries(TestPipelineNodes signalutils)

add_executable(TestFileReaderWriter TestFileReaderWriterAccumulator.cpp)
target_link_libraries(TestFileReaderWriter nodes_impl)
target_link_libraries(TestFileReaderWriter signalutils)

add_executable(TestMotionDetector TestMotionDetector.cpp)
target_link_libraries(TestMotionDetector nodes_impl)
target_link_libraries(TestMotionDetector signalutils)
target_link_libraries(TestMotionDetector MotionDetector)

add_executable(TestWebCam TestWebCam.cpp)
target_link_libraries(TestWebCam nodes_impl)
target_link_libraries(TestWebCam signalutils)
target_link_libraries(TestWebCam FileUtils)
target_link_libraries(TestWebCam rapidjson_3rdParty)
