add_executable(TestPipelineNodes TestPipelineNodes.cpp)
target_link_libraries(TestPipelineNodes nodes_impl)
target_link_libraries(TestPipelineNodes signalutils)

add_executable(TestFileReaderWriter TestFileReaderWriterAccumulator.cpp)
target_link_libraries(TestFileReaderWriter nodes_impl)
target_link_libraries(TestFileReaderWriter signalutils)

add_subdirectory(realtime_display)
add_subdirectory(motiondetector)
