add_executable(TestReceiver TestReceiver.cpp)
target_link_libraries(TestReceiver argparser)
target_link_libraries(TestReceiver signalutils)
target_link_libraries(TestReceiver sockets)

add_executable(TestSender TestSender.cpp)
target_link_libraries(TestSender argparser)
target_link_libraries(TestSender sockets)
